# uvexec

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  ci_pre.yml  cmake-multi-platform.yml
cmake/: CPM.cmake
examples/: CMakeLists.txt  echo_uv.c  echo_uvexec.cpp  echo_uvexec_udp.cpp  echo_with_async_value.cpp  schedule_bench.cpp  tcp_bench.cpp
include/uvexec/: uvexec.hpp
include/uvexec/algorithms/: accept.hpp  accept_from.hpp  accept_from_op_state.hpp  after.hpp  after_op_state.hpp  async_value.hpp  async_value_op_state.hpp  bind_to.hpp  bind_to_op_state.hpp  close.hpp  close_receiver.hpp  completion_signatures.hpp  connect.hpp  connect_receiver.hpp  connect_to.hpp  connect_to_op_state.hpp  read_some.hpp  read_some_op_state.hpp  read_until.hpp  read_until_op_state.hpp  receive.hpp  receive_from.hpp  receive_from_op_state.hpp  receive_op_state.hpp  schedule.hpp  schedule_op_state.hpp  send.hpp  send_receiver.hpp  send_to.hpp  send_to_receiver.hpp  shutdown.hpp  shutdown_receiver.hpp  upon_signal.hpp  upon_signal_op_state.hpp  write.hpp  write_receiver.hpp
include/uvexec/execution/: error_code.hpp  loop.hpp  loop_clock.hpp  runner.hpp  sync_wait_receiver.hpp
include/uvexec/interface/: closure.hpp  domain.hpp  uvexec.hpp
include/uvexec/meta/: deduce.hpp  detail.hpp  meta.hpp
include/uvexec/sockets/: addr.hpp  tcp.hpp  tcp_listener.hpp  udp.hpp
include/uvexec/util/: intrusive_list.hpp  lazy.hpp
include/uvexec/uv_util/: errors.hpp  misc.hpp  reqs.hpp  safe_uv.hpp
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  uvexec.cpp
src/execution/: error_code.cpp  loop.cpp  runner.cpp
src/sockets/: addr.cpp  tcp.cpp  tcp_listener.cpp  udp.cpp
src/uv_util/: errors.cpp  misc.cpp  reqs.cpp  safe_uv.c
tests/: CMakeLists.txt  async_value.cpp  execution.cpp  signal.cpp  tcp.cpp  time.cpp  udp.cpp
